правки стилей hero-section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                             сады</a></li>
                                     <li><a class="dropdown-item pre-mobile-menu__dropdown-item" href="#">Центр
                                             развития</a></li>
-                                    <li><a class="dropdown-item pre-mobile-menu__dropdown-item" href="#">Новости</a>
+                                    <li><a class="dropdown-item pre-mobile-menu__dropdown-item" href="./pages/news.html">Новости</a>
                                     </li>
                                     <li><a class="dropdown-item pre-mobile-menu__dropdown-item" href="#">Блог</a></li>
                                     <li><a class="dropdown-item pre-mobile-menu__dropdown-item" href="#">Сведения...</a>
@@ -67,7 +67,7 @@
                             <li class="header__menu-item"><a href="" class="header__menu-link">О нас</a></li>
                             <li class="header__menu-item"><a href="" class="header__menu-link">Детские сады</a></li>
                             <li class="header__menu-item"><a href="" class="header__menu-link">Центр развития</a></li>
-                            <li class="header__menu-item"><a href="" class="header__menu-link">Новости</a></li>
+                            <li class="header__menu-item"><a href="./pages/news.html" class="header__menu-link">Новости</a></li>
                             <li class="header__menu-item"><a href="" class="header__menu-link">Блог</a></li>
                             <li class="header__menu-item"><a href="" class="header__menu-link">Сведения...</a></li>
                         </ul>
@@ -2557,7 +2557,7 @@
                                 <li class="footer__menu-item"><a href="" class="footer__menu-link">О нас</a></li>
                                 <li class="footer__menu-item"><a href="" class="footer__menu-link">Центр развития</a>
                                 </li>
-                                <li class="footer__menu-item"><a href="" class="footer__menu-link">Новости</a></li>
+                                <li class="footer__menu-item"><a href="./pages/news.html" class="footer__menu-link">Новости</a></li>
                                 <li class="footer__menu-item"><a href="" class="footer__menu-link">Блог</a></li>
                             </ul>
                         </nav>
