общие компоненты страниц

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -41,8 +41,8 @@
             <div class="my-container header__container">
                 <div class="header__desktop">
                     <div class="header__left">
-                        <a href="../index.html" class="header__logo-link"><img src="../assets/images/logo.svg"
-                                alt="logo" class="header__logo-img"></a>
+                        <a href="../index.html" class="header__logo-link"><img src="../assets/images/logo.svg" alt="logo"
+                                class="header__logo-img"></a>
                         <div class="pre-mobile-menu header__pre-mobile-menu">
                             <div class="dropdown pre-mobile-menu__dropdown">
                                 <button class="burger-button" type="button" data-bs-toggle="dropdown"
@@ -57,11 +57,9 @@
                                             сады</a></li>
                                     <li><a class="dropdown-item pre-mobile-menu__dropdown-item" href="./development-center.html">Центр
                                             развития</a></li>
-                                    <li><a class="dropdown-item pre-mobile-menu__dropdown-item"
-                                            href="./news.html">Новости</a>
+                                    <li><a class="dropdown-item pre-mobile-menu__dropdown-item" href="./news.html">Новости</a>
                                     </li>
-                                    <li><a class="dropdown-item pre-mobile-menu__dropdown-item"
-                                            href="./blog.html">Блог</a></li>
+                                    <li><a class="dropdown-item pre-mobile-menu__dropdown-item" href="./blog.html">Блог</a></li>
                                     <li><a class="dropdown-item pre-mobile-menu__dropdown-item" href="#">Сведения...</a>
                                     </li>
                                 </ul>
@@ -73,8 +71,7 @@
                             <li class="header__menu-item"><a href="./about.html" class="header__menu-link">О нас</a></li>
                             <li class="header__menu-item"><a href="" class="header__menu-link">Детские сады</a></li>
                             <li class="header__menu-item"><a href="./development-center.html" class="header__menu-link">Центр развития</a></li>
-                            <li class="header__menu-item"><a href="./news.html" class="header__menu-link">Новости</a>
-                            </li>
+                            <li class="header__menu-item"><a href="./news.html" class="header__menu-link">Новости</a></li>
                             <li class="header__menu-item"><a href="./blog.html" class="header__menu-link">Блог</a></li>
                             <li class="header__menu-item"><a href="" class="header__menu-link">Сведения...</a></li>
                         </ul>
@@ -101,8 +98,8 @@
                 </div>
                 <div class="header__mobile --no-sectionsLinks">
                     <div class="header__mobile-top">
-                        <a href="../index.html" class="header__logo-link"><img src="../assets/images/logo.svg"
-                                alt="logo" class="header__logo-img"></a>
+                        <a href="../index.html" class="header__logo-link"><img src="../assets/images/logo.svg" alt="logo"
+                                class="header__logo-img"></a>
                         <div class="header__buttons">
                             <a href="tel:+73952738200"
                                 class="my-button my-button_lightGreen my-button_borderOval header__link-phone">+7 (3952)
@@ -190,30 +187,28 @@
                 <div class="my-container hero-section__container">
                     <div class="hero-section__body">
                         <div class="hero-section__body-texts">
-                            <div class="hero-section__title">Новости
-                                <div class="hero-section__location">
-                                    <div class="hero-section__location-img">
-                                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                            xmlns="http://www.w3.org/2000/svg">
-                                            <path
-                                                d="M12 2C7.582 2 4 5.35813 4 9.5C4 11.1309 4.57033 12.6275 5.51833 13.8531C5.53533 13.8825 5.538 13.9153 5.55733 13.9434L10.8907 21.4434C11.138 21.7913 11.5547 22 12 22C12.4453 22 12.862 21.7913 13.1093 21.4434L18.4427 13.9434C18.4623 13.9153 18.4647 13.8825 18.4817 13.8531C19.4297 12.6275 20 11.1309 20 9.5C20 5.35813 16.418 2 12 2ZM12 12C10.5273 12 9.33333 10.8806 9.33333 9.5C9.33333 8.11937 10.5273 7 12 7C13.4727 7 14.6667 8.11937 14.6667 9.5C14.6667 10.8806 13.4727 12 12 12Z"
-                                                fill="black" />
-                                        </svg>
-                                    </div> <span class="hero-section__location-text"> В Иркутске</span>
-                                </div>
+                        <div class="hero-section__title">Полезные статьи
+                            <div class="hero-section__location">
+                                <div class="hero-section__location-img">
+                                    <svg width="24" height="24" viewBox="0 0 24 24"
+                                        fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M12 2C7.582 2 4 5.35813 4 9.5C4 11.1309 4.57033 12.6275 5.51833 13.8531C5.53533 13.8825 5.538 13.9153 5.55733 13.9434L10.8907 21.4434C11.138 21.7913 11.5547 22 12 22C12.4453 22 12.862 21.7913 13.1093 21.4434L18.4427 13.9434C18.4623 13.9153 18.4647 13.8825 18.4817 13.8531C19.4297 12.6275 20 11.1309 20 9.5C20 5.35813 16.418 2 12 2ZM12 12C10.5273 12 9.33333 10.8806 9.33333 9.5C9.33333 8.11937 10.5273 7 12 7C13.4727 7 14.6667 8.11937 14.6667 9.5C14.6667 10.8806 13.4727 12 12 12Z"
+                                            fill="black" />
+                                    </svg>
+                                </div> <span class="hero-section__location-text"> В Иркутске</span>
                             </div>
-                            <div class="hero-section__text">Мы наполняем повседневную жизнь ребенка творчеством
-                                и интересными открытиями. С нами дети не просто учатся получать удовольствие от
-                                взаимодействия с окружающим миром: они учатся смотреть на обычные вещи под совершенно
-                                разным углом, составлять о них собственное мнение и делать определенные выводы.</div>
                         </div>
+                        <div class="hero-section__text">Для тех, кто хочет узнать больше о воспитании, 
+                            образовании и жизни ребёнка: рассказывают специалисты в дошкольном образовании. Что такое реджио-подход и проектное обучение, по какой образовательной программе мы работаем и какие пособия используем, когда нужен логопед, как правильно помочь ребёнку преодолеть трудности в развитии и многое другое.</div>
+                    </div>
                         <div class="hero-section__links">
                             <a href="" class="hero-section__link active">записаться <br> на экскурсию</a>
                             <a href="" class="hero-section__link">выбрать <br> садик</a>
                         </div>
                     </div>
                     <div class="hero-section__right-content">
-                        <div class="hero-section__title">Новости
+                        <div class="hero-section__title">Полезные статьи
                             <div class="hero-section__location">
                                 <div class="hero-section__location-img">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -228,8 +223,7 @@
                         <div class="hero-section__wrap-img"></div>
                     </div>
                 </div>
-                <img src="./assets/images/pages/main/background/cones-7.png" alt=""
-                    class="hero-section__background-img">
+                <img src="./assets/images/pages/main/background/cones-7.png" alt="" class="hero-section__background-img">
             </section>
 
             <!-- ... -->
@@ -237,7 +231,7 @@
             <!-- ЕСЛИ feedback-block НАХОДИТЬСЯ ВНЕ КАКОЙ-ЛИБО СЕКЦИИ, ТО НАДО ЕГО ОБЕРНУТЬ ВНУТРЬ БЛОКА feedback, ЕСЛИ ОН ЧАСТЬ СЕКЦИИ (КАК НА ГЛАВЙНОЙ), ТАМ СВОЯ УНИКАЛЬНАЯ ОБЁРТКА -->
             <section class="feedback main__feedback">
                 <div class="my-container feedback__container">
-                    <article class="feedback-block">
+                    <article class="feedback-block reviews__feedback-block">
                         <div class="my-container feedback-block__container">
                             <div class="feedback-block__inner">
                                 <div class="feedback-block__description">
@@ -251,10 +245,10 @@
                                 </div>
                                 <form action="" class="feedback-form feedback-block__form">
                                     <div class="feedback-form__elements">
-                                        <input type="text" name="input-name" id="inputName"
-                                            class="my-input feedback-form__input" placeholder="Ваше имя">
-                                        <input type="tel" name="input-phone" id="inputPhone"
-                                            class="my-input feedback-form__input" placeholder="+7 (999) 999 99 99">
+                                        <input type="text" name="input-name" id="inputName" class="my-input feedback-form__input"
+                                            placeholder="Ваше имя">
+                                        <input type="tel" name="input-phone" id="inputPhone" class="my-input feedback-form__input"
+                                            placeholder="+7 (999) 999 99 99">
                                         <label for="agreementCheck" class="my-checkbox feedback-form__checkbox">
                                             <input type="checkbox" name="agreement-checkbox" id="agreementCheck"
                                                 class="my-checkbox__old">
@@ -264,8 +258,7 @@
                                                     class="my-checkbox__text-link">обработку персональных
                                                     данных</a></span>
                                         </label>
-                                        <button
-                                            class="my-button my-button_borderSquare feedback-form__button">отправить</button>
+                                        <button class="my-button my-button_borderSquare feedback-form__button">отправить</button>
                                     </div>
                                 </form>
                             </div>
@@ -273,8 +266,8 @@
                     </article>
                 </div>
             </section>
-            
-            
+
+
             <!-- ВЫНЕС ОФОРМЛЕНИЕ ОТДЕЛЬНО (МОЖНО ВНЕСТИ БЛОК В LAYOUT) -->
             <section class="contacts main__contacts">
                 <div class="my-container contacts__container">
@@ -345,10 +338,8 @@
                                 <li class="footer__menu-item"><a href="./about.html" class="footer__menu-link">О нас</a></li>
                                 <li class="footer__menu-item"><a href="./development-center.html" class="footer__menu-link">Центр развития</a>
                                 </li>
-                                <li class="footer__menu-item"><a href="./news.html"
-                                        class="footer__menu-link">Новости</a></li>
-                                <li class="footer__menu-item"><a href="./blog.html" class="footer__menu-link">Блог</a>
-                                </li>
+                                <li class="footer__menu-item"><a href="./news.html" class="footer__menu-link">Новости</a></li>
+                                <li class="footer__menu-item"><a href="./blog.html" class="footer__menu-link">Блог</a></li>
                             </ul>
                         </nav>
                     </div>
