вёрстка блоков для страницы О нас

--- a/pages/about.html
+++ b/pages/about.html
@@ -237,7 +237,28 @@
                 <img src="../assets/images/pages/main/background/cones-7.png" alt="" class="hero-section__background-img">
             </section>
 
-            <!-- ... -->
+            <section class="about-info main__about-info">
+                <div class="my-container about-info__container">
+                    <div class="about-info__video-wrap --video-poster">
+                        <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="about-info__video-poster">
+                    </div>
+                    <div class="about-info__body">
+                        <div class="block-title about-info__title">О нас</div>
+                        <div class="about-info__texts">
+                            <p class="about-info__text">
+                                Детский сад “Семь Звёзд” был создан в 2007 году. Сегодня это уникальное образовательное пространство, которое вдохновляет детей на самостоятельное исследование и творчество. В наших садиках дети учатся не только через занятия, но и через общение, сотрудничество и взаимодействие с окружающей средой. 
+                            </p>
+                            <p class="about-info__text">
+                                Один из ключевых принципов реджио-подхода — это уважение к мнению каждого ребенка и создание условий для его самовыражения. Воспитатели выступают не только как учителя, но и как друзья, которые наблюдают, слушают и поддерживают детей в их стремлениях. Здесь ценится каждая идея, каждое открытие и каждая творческая работа.
+                            </p>
+                            <p class="about-info__text">
+                                В детских садах “Семь Звёзд” дети сами создают себя как личность — а мы поддерживаем их во всем, помогаем и направляем.
+                            </p>
+                        </div>
+                        <button class="my-button my-button_noColor my-button_borderSquare about-info__button">узнать больше о&nbsp;<span class="nowrap">реджио-подходе</span></button>
+                    </div>
+                </div>
+            </section>
             
             <!-- ВЫНЕС ОФОРМЛЕНИЕ ОТДЕЛЬНО (БЛОК ШАБЛОННЫЙ). ГЛАВНОЕ ЧТОБ data АТРИБУТ БЫЛ УНИКАЛЬНЫМ ДЛЯ РАЗНЫХ ТАКИХ БЛОКОВ И ССЫЛКИ НА КАРТИНКИ СЛАЙДОВ -->
             <section class="staff main__staff" data-staff-type="admins">
@@ -469,6 +490,74 @@
                     </div>
                 </div>
                 <img src="../assets/images/pages/main/background/cones-1.png" alt="" class="staff__background-img">
+            </section>
+
+            <section class="awards main__awards">
+                <div class="my-container awards__container">
+                    <div class="avantage-descripion awards__description">
+                        <h2 class="block-title avantage-descripion__title">Благодарности и&nbsp;награды</h2>
+                        <div class="avantage-descripion__texts">
+                            <div class="avantage-descripion__pre-title">За участие в общественных мероприятиях и вклад в развитие и воспитание детей</div>
+                                <p class="avantage-descripion__text">Мы понимаем, что родителям важно доверить образование детей проверенной организации, зарегистрированной во всех инстанциях. Все авторские методики, разработанные в центре, проходят государственную аттестацию и соответствуют всем образовательным стандартам.</p>
+                                <p class="avantage-descripion__text">Но мы не останавливаемся на достигнутом и стремимся как можно больше участвовать в развитии и воспитании детей в современном обществе. </p>
+                        </div>
+                    </div>
+                    <div class="awards__slider">
+                        <div class="awards__swiper-controls">
+                            <div class="swiper-pagination awards__swiper-pagination"></div>
+                            <div class="swiper-navigation awards__swiper-navigation">
+                                <div class="swiper-button-prev awards__swiper-button-prev">
+                                    <img src="../assets/images/slider/arrow-prev.svg" alt=""
+                                        class="swiper-button-prev-img">
+                                </div>
+                                <div class="swiper-button-next awards__swiper-button-next">
+                                    <img src="../assets/images/slider/arrow-next.svg" alt=""
+                                        class="swiper-button-next-img">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper awards__swiper">
+                            <div class="swiper-wrapper awards__swiper-wrapper">
+                                <div class="swiper-slide awards__swiper-slide">
+                                    <div class="awards__slide">
+                                        <div class="awards__slide-title">оверхед-проекторы</div>
+                                        <div class="awards__slide-wrap-img">
+                                            <img src="../assets/images/pages/main/modern-tools/slide-1.jpg" alt=""
+                                                class="awards__slide-img">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide awards__swiper-slide">
+                                    <div class="awards__slide">
+                                        <div class="awards__slide-title">электронные микроскопы</div>
+                                        <div class="awards__slide-wrap-img">
+                                            <img src="../assets/images/pages/main/modern-tools/slide-2.jpg" alt=""
+                                                class="awards__slide-img">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide awards__swiper-slide">
+                                    <div class="awards__slide">
+                                        <div class="awards__slide-title">световые столы</div>
+                                        <div class="awards__slide-wrap-img">
+                                            <img src="../assets/images/pages/main/modern-tools/slide-3.jpg" alt=""
+                                                class="awards__slide-img">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide awards__swiper-slide">
+                                    <div class="awards__slide">
+                                        <div class="awards__slide-title">ПЕСОЧНИЦЫ ДЛЯ ПОМЕЩЕНИЙ</div>
+                                        <div class="awards__slide-wrap-img">
+                                            <img src="../assets/images/pages/main/modern-tools/slide-4.jpg" alt=""
+                                                class="awards__slide-img">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
             
             <!-- ВЫНЕС ОФОРМЛЕНИЕ ОТДЕЛЬНО (БЛОК ШАБЛОННЫЙ) -->
@@ -1048,6 +1137,37 @@
 
     <script src="../assets/js/sections/staff.js"></script>
     <script src="../assets/js/sections/reviews.js"></script>
+
+
+    <!-- СКРИПТЫ СТРАНИЦЫ -->
+     <script>
+        const awardsSwiper = new Swiper('.awards__swiper', {
+            direction: 'horizontal',
+            slidesPerView: 1.15,
+            spaceBetween: 20,
+            pagination: {
+                el: '.awards__swiper-pagination',
+                type: 'custom',
+                renderCustom: function (swiper, current, total) {
+                    return `${String(current).padStart(2, '0')}`;
+                },
+            },
+            navigation: {
+                nextEl: '.awards__swiper-button-next',
+                prevEl: '.awards__swiper-button-prev',
+            },
+            breakpoints: {
+                769: {
+                    slidesPerView: 2.1,
+                    spaceBetween: 24,
+                },
+                991: {
+                    slidesPerView: 3,
+                    spaceBetween: 24,
+                }
+            }
+        });
+     </script>
 </body>
 
 </html>
