вёрстка блоков страницы Обучение живописи

--- a/pages/painting-education.html
+++ b/pages/painting-education.html
@@ -241,6 +241,8 @@
                 <img src="../assets/images/pages/main/background/cones-7.png" alt="" class="hero-section__background-img">
             </section>
             
+            <!-- ... -->
+
             <!-- ВЫНЕС ОФОРМЛЕНИЕ ОТДЕЛЬНО (БЛОК ШАБЛОННЫЙ). ЕСЛИ ТАКИХ БЛОКОВ БУДЕТ НЕСКОЛЬКО НА СТРАНИЦЕ, ВАЖНО ЧТОБ data АТРИБУТ БЫЛ РАЗНЫХ ДЛЯ КАЖДОГО -->
             <section class="simple-slider-section main__simple-slider-section" data-simpleSlider-id="slider1">
                 <div class="my-container simple-slider-section__container">
@@ -351,7 +353,129 @@
                 </div>
             </section>
 
-            <!-- ... -->
+            <section class="lesson-structure main__lesson-structure">
+                <div class="my-container lesson-structure__container">
+                    <div class="block-title lesson-structure__title">Как построены уроки живописи <br> в&nbsp;нашем центре</div>
+                    <div class="lesson-structure__lesson-stages">
+                        <div class="lesson-structure__lesson-stage">
+                            <div class="lesson-structure__lesson-stage-info --textImage_visible">
+                                    <div class="lesson-structure__lesson-stage-number">01</div>
+                                    <div class="lesson-structure__lesson-stage-pre-title">Урок начинается с&nbsp;выбора темы</div>
+                                    <img src="../assets/images/pages/main/inspiration/text-slides/text-slide-img-1.png"
+                                        alt="" class="lesson-structure__lesson-stage-mini-img">
+                            </div>
+                            <div class="lesson-structure__lesson-stage-image-wrap">
+                                <img src="../assets/images/pages/main/dev-environment/slide-img-4.jpg" alt="" class="lesson-structure__lesson-stage-img">
+                            </div>
+                            <div class="lesson-structure__lesson-stage-texts">
+                                <p class="lesson-structure__lesson-stage-text">Педагог совместно с ребенком выбирает тему занятия: детям важно учиться изображать то, что им интересно. Это хорошо мотивирует на дальнейшее обучение</p>
+                            </div>
+                        </div>
+                        <div class="lesson-structure__lesson-stage">
+                            <div class="lesson-structure__lesson-stage-info --textImage_visible">
+                                    <div class="lesson-structure__lesson-stage-number">01</div>
+                                    <div class="lesson-structure__lesson-stage-pre-title">Урок начинается с&nbsp;выбора темы</div>
+                                    <img src="../assets/images/pages/main/inspiration/text-slides/text-slide-img-1.png"
+                                        alt="" class="lesson-structure__lesson-stage-mini-img">
+                            </div>
+                            <div class="lesson-structure__lesson-stage-image-wrap">
+                                <img src="../assets/images/pages/main/dev-environment/slide-img-4.jpg" alt="" class="lesson-structure__lesson-stage-img">
+                            </div>
+                            <div class="lesson-structure__lesson-stage-texts">
+                                <p class="lesson-structure__lesson-stage-text">Педагог совместно с ребенком выбирает тему занятия: детям важно учиться изображать то, что им интересно. Это хорошо мотивирует на дальнейшее обучение</p>
+                            </div>
+                        </div>
+                        <div class="lesson-structure__lesson-stage">
+                            <div class="lesson-structure__lesson-stage-info --textImage_visible">
+                                    <div class="lesson-structure__lesson-stage-number">01</div>
+                                    <div class="lesson-structure__lesson-stage-pre-title">Урок начинается с&nbsp;выбора темы</div>
+                                    <img src="../assets/images/pages/main/inspiration/text-slides/text-slide-img-1.png"
+                                        alt="" class="lesson-structure__lesson-stage-mini-img">
+                            </div>
+                            <div class="lesson-structure__lesson-stage-image-wrap">
+                                <img src="../assets/images/pages/main/dev-environment/slide-img-4.jpg" alt="" class="lesson-structure__lesson-stage-img">
+                            </div>
+                            <div class="lesson-structure__lesson-stage-texts">
+                                <p class="lesson-structure__lesson-stage-text">Педагог совместно с ребенком выбирает тему занятия: детям важно учиться изображать то, что им интересно. Это хорошо мотивирует на дальнейшее обучение</p>
+                            </div>
+                        </div>
+                        <div class="lesson-structure__lesson-stage">
+                            <div class="lesson-structure__lesson-stage-info --textImage_visible">
+                                    <div class="lesson-structure__lesson-stage-number">01</div>
+                                    <div class="lesson-structure__lesson-stage-pre-title">Оставшаяся часть урока посвящена работе с художественными инструментами</div>
+                                    <img src="../assets/images/pages/main/inspiration/text-slides/text-slide-img-1.png"
+                                        alt="" class="lesson-structure__lesson-stage-mini-img">
+                            </div>
+                            <div class="lesson-structure__lesson-stage-image-wrap">
+                                <img src="../assets/images/pages/main/dev-environment/slide-img-4.jpg" alt="" class="lesson-structure__lesson-stage-img">
+                            </div>
+                            <div class="lesson-structure__lesson-stage-texts">
+                                <p class="lesson-structure__lesson-stage-text">Педагог совместно с ребенком выбирает тему занятия: детям важно учиться изображать то, что им интересно. Это хорошо мотивирует на дальнейшее обучение</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="lesson-teacher main__lesson-teacher">
+                <div class="my-container lesson-teacher__container">
+                    <div class="lesson-teacher__img-slider">
+                        <div class="lesson-teacher__swiper-controls">
+                            <div class="swiper-pagination lesson-teacher__swiper-pagination"></div>
+                            <div class="swiper-navigation lesson-teacher__swiper-navigation">
+                                <div class="swiper-button-prev lesson-teacher__swiper-button-prev">
+                                    <svg width="27" height="27" viewBox="0 0 27 27" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <g clip-path="url(#clip0_92_1209)">
+                                            <path
+                                                d="M21.0908 13.915L5.78616 13.915M5.78616 13.915L12.1631 20.292M5.78616 13.915L12.1631 7.53809"
+                                                stroke="#4E6932" stroke-width="1.4" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                        </g>
+                                        <defs>
+                                            <clipPath id="clip0_92_1209">
+                                                <rect width="26" height="26" fill="white"
+                                                    transform="translate(0.438477 0.915039)" />
+                                            </clipPath>
+                                        </defs>
+                                    </svg>
+                                </div>
+                                <div class="swiper-button-next lesson-teacher__swiper-button-next">
+                                    <svg width="27" height="27" viewBox="0 0 27 27" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <g clip-path="url(#clip0_2050_215)">
+                                            <path
+                                                d="M5.78616 13.9151L21.0908 13.9151M21.0908 13.9151L14.7139 7.53811M21.0908 13.9151L14.7139 20.292"
+                                                stroke="#4E6932" stroke-width="1.4" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                        </g>
+                                        <defs>
+                                            <clipPath id="clip0_2050_215">
+                                                <rect width="26" height="26" fill="white"
+                                                    transform="translate(0.438477 0.915039)" />
+                                            </clipPath>
+                                        </defs>
+                                    </svg>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper lesson-teacher__swiper">
+                            <div class="swiper-wrapper lesson-teacher__swiper-wrapper">
+                                <div class="swiper-slide lesson-teacher__swiper-slide">
+                                    <div class="lesson-teacher__slide"><img src="../assets/images/pages/main/teachers/slide-img-2.png" alt="" class="lesson-teacher__slide-img"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="lesson-teacher__body">
+                        <div class="block-title lesson-teacher__title">Занятия ведет</div>
+                        <div class="lesson-teacher__text-info">
+                            <div class="lesson-teacher__name">Губарь Елена Георгиевна</div>
+                            <div class="lesson-teacher__text">Текст о регалиях и достижениях педагога</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             
             <!-- ВЫНЕС ОФОРМЛЕНИЕ ОТДЕЛЬНО (БЛОК ШАБЛОННЫЙ) -->
             <section class="reviews main__reviews">
