--- a/pages/about.html
+++ b/pages/about.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="../styles/components/header.css">
     <link rel="stylesheet" href="../styles/components/footer.css">
     <link rel="stylesheet" href="../styles/components/feedback-block.css">
+    <link rel="stylesheet" href="../styles/components/stories.css">
 
     <!-- вот этот компонент не подключать лучше к главной странице -->
     <link rel="stylesheet" href="../styles/components/sections/hero-section.css">
@@ -236,6 +237,114 @@
                 </div>
                 <img src="../assets/images/pages/main/background/cones-7.png" alt="" class="hero-section__background-img">
             </section>
+
+            <!-- ВЫНЕС ОФОРМЛЕНИЕ ОТДЕЛЬНО (БЛОК ШАБЛОННЫЙ) -->
+            <div class="stories main__stories">
+                <div class="my-container stories__container">
+                    <div class="stories__inner">
+                        <div class="swiper stories__swiper">
+                            <div class="swiper-wrapper stories__swiper-wrapper">
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <section class="about-info main__about-info">
                 <div class="my-container about-info__container">
@@ -1134,6 +1243,7 @@
     <script src="../assets/js/open-content.js"></script>
 
     <script src="../assets/js/header.js"></script>
+    <script src="../assets/js/components/stories.js"></script>
 
     <script src="../assets/js/sections/staff.js"></script>
     <script src="../assets/js/sections/reviews.js"></script>
