--- a/pages/early-development-school.html
+++ b/pages/early-development-school.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="../styles/components/header.css">
     <link rel="stylesheet" href="../styles/components/footer.css">
     <link rel="stylesheet" href="../styles/components/feedback-block.css">
+    <link rel="stylesheet" href="../styles/components/stories.css">
 
     <!-- вот этот компонент не подключать лучше к главной странице -->
     <link rel="stylesheet" href="../styles/components/sections/hero-section.css">
@@ -244,8 +245,114 @@
                 <img src="../assets/images/pages/main/background/cones-7.png" alt="" class="hero-section__background-img">
             </section>
             
-            <!-- ... -->
-            
+            <!-- ВЫНЕС ОФОРМЛЕНИЕ ОТДЕЛЬНО (БЛОК ШАБЛОННЫЙ) -->
+            <div class="stories main__stories">
+                <div class="my-container stories__container">
+                    <div class="stories__inner">
+                        <div class="swiper stories__swiper">
+                            <div class="swiper-wrapper stories__swiper-wrapper">
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt="" class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <section class="why-need-school main__why-need-school">
                 <div class="my-container why-need-school__container">
                     <h2 class="block-title why-need-school__title">Зачем ребенку нужна <br> школа раннего развития?</h2>
@@ -297,6 +404,9 @@
                     </div>
                 </div>
             </section>
+
+            <!-- ... -->
+
             <section class="child-age main__reviews">
                 <div class="my-container child-age__container">
                     <h2 class="block-title child-age__title">От 3 до 5 лет</h2>
@@ -928,7 +1038,8 @@
     <script src="../assets/js/open-content.js"></script>
     <script src="../assets/js/fancybox-init.js"></script>
 
-    <script src="../assets/js/header.js"></script>
+    <script src="../assets/js/components/header.js"></script>
+    <script src="../assets/js/components/stories.js"></script>
 
     <script src="../assets/js/sections/staff.js"></script>
     <script src="../assets/js/sections/reviews.js"></script>
