--- a/pages/painting-education.html
+++ b/pages/painting-education.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="../styles/components/header.css">
     <link rel="stylesheet" href="../styles/components/footer.css">
     <link rel="stylesheet" href="../styles/components/feedback-block.css">
+    <link rel="stylesheet" href="../styles/components/stories.css">
 
     <!-- вот этот компонент не подключать лучше к главной странице -->
     <link rel="stylesheet" href="../styles/components/sections/hero-section.css">
@@ -199,7 +200,8 @@
                 <div class="my-container hero-section__container">
                     <div class="hero-section__body">
                         <div class="hero-section__body-texts">
-                            <div class="hero-section__title">Обучение живописи <br> с&nbsp;пяти лет <br> <span>В&nbsp;иркутске</span>
+                            <div class="hero-section__title">Обучение живописи <br> с&nbsp;пяти лет <br>
+                                <span>В&nbsp;иркутске</span>
                                 <div class="hero-section__location">
                                     <div class="hero-section__location-img">
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -211,11 +213,13 @@
                                     </div> <span class="hero-section__location-text"> В Иркутске</span>
                                 </div>
                             </div>
-                            <div class="hero-section__pre-title">стоимость абонемента <span class="nowrap">2800&nbsp;р/месяц</span></div>
+                            <div class="hero-section__pre-title">стоимость абонемента <span class="nowrap">2800&nbsp;р/месяц</span>
+                            </div>
                             <ul class="hero-section__list">
                                 <li class="hero-section__list-item">пробный урок — бесплатно!</li>
                                 <li class="hero-section__list-item">длительность занятия — 1&nbsp;час&nbsp;20&nbsp;минут</li>
-                                <li class="hero-section__list-item">желающих готовим к поступлению <br> в&nbsp;художественную школу</li>
+                                <li class="hero-section__list-item">желающих готовим к поступлению <br> в&nbsp;художественную школу
+                                </li>
                             </ul>
                         </div>
                         <div class="hero-section__links">
@@ -241,8 +245,126 @@
                 <img src="../assets/images/pages/main/background/cones-7.png" alt="" class="hero-section__background-img">
             </section>
             
-            <!-- ... -->
-
+            <!-- ВЫНЕС ОФОРМЛЕНИЕ ОТДЕЛЬНО (БЛОК ШАБЛОННЫЙ) -->
+            <div class="stories main__stories">
+                <div class="my-container stories__container">
+                    <div class="stories__inner">
+                        <div class="swiper stories__swiper">
+                            <div class="swiper-wrapper stories__swiper-wrapper">
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                                class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                                class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                                class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                                class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                                class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                                class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                                class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                                class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                                class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                                class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                                class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide stories__swiper-slide">
+                                    <div class="stories__slide">
+                                        <div class="stories__slide-img-wrap">
+                                            <img src="../assets/images/7dfed08c6154ea9cb55b42bfd0ba19f8.jpg" alt=""
+                                                class="stories__slide-img">
+                                        </div>
+                                        <div class="stories__title">Подпись</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
             <!-- ВЫНЕС ОФОРМЛЕНИЕ ОТДЕЛЬНО (БЛОК ШАБЛОННЫЙ). ЕСЛИ ТАКИХ БЛОКОВ БУДЕТ НЕСКОЛЬКО НА СТРАНИЦЕ, ВАЖНО ЧТОБ data АТРИБУТ БЫЛ РАЗНЫХ ДЛЯ КАЖДОГО -->
             <section class="simple-slider-section main__simple-slider-section" data-simpleSlider-id="slider1">
                 <div class="my-container simple-slider-section__container">
@@ -773,6 +895,7 @@
     <script src="../assets/js/open-content.js"></script>
 
     <script src="../assets/js/header.js"></script>
+    <script src="../assets/js/components/stories.js"></script>
 
     <script src="../assets/js/sections/simple-slider-section.js"></script>
     <script src="../assets/js/sections/reviews.js"></script>
